cmake_minimum_required (VERSION 3.20)
if (WIN32)
set(VCPKG_TARGET_TRIPLET x64-windows-static-md CACHE STRING "")
endif()
include(external/vcpkg/scripts/buildsystems/vcpkg.cmake)
project(llarr)
find_package(fmt CONFIG REQUIRED)
find_package(GTest CONFIG REQUIRED)
add_subdirectory(src)
enable_testing()
add_subdirectory(tests)
